--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-API_URL=https://ourhealth.cc
-IMAGES_DOMAIN=http://localhost:3000
+siteUrl=http://localhost:3000
 PORT=3000
 
 #API_URL=https://3d-landing-page-for-iphone.vercel.app
