--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "uuuuu",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev", 
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "i18next": "^22.0.6",
     "install": "^0.13.0",
@@ -22,6 +22,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.0.0",
     "swiper": "^8.4.5"
   }
